# jeep-sensor-hub

./: .env.default  .gitignore  LICENSE  README.md  setup_jeep_sensor_hub.sh
pi-ui/: CMakeLists.txt  REFACTOR_COMPLETE.md  lv_drv_conf.h  setup_dependencies.sh
pi-ui/include/: lv_conf.h
pi-ui/src/: app_data_store.c  app_data_store.h  esp_compat.c  esp_compat.h  lvgl_port_pi.c  lvgl_port_pi.h  main.c
pi-ui/src/data/: config.c  config.h
pi-ui/src/data/lerp_data/: lerp_data.c  lerp_data.h
pi-ui/src/data/mock_data/: mock_data.c  mock_data.h
pi-ui/src/data/real_data/: real_data.c  real_data.h
pi-ui/src/displayModules/: README.md
pi-ui/src/displayModules/power-monitor/: gauge_types.h  power-monitor.c  power-monitor.h  power_alerts_config.c  power_alerts_config.h  timeline_modal_config.c  timeline_modal_config.h  voltage_alerts_config.c  voltage_alerts_config.h
pi-ui/src/displayModules/shared/: display_module_base.h  module_interface.c  module_interface.h  palette.h
pi-ui/src/fonts/: lv_font_noplato_10.c  lv_font_noplato_10.h  lv_font_noplato_14.c  lv_font_noplato_14.h  lv_font_noplato_18.c  lv_font_noplato_18.h  lv_font_noplato_20.c  lv_font_noplato_20.h  lv_font_noplato_24.c  lv_font_noplato_24.h  lv_font_noplato_32.c  lv_font_noplato_32.h  lv_font_zector_72.c  lv_font_zector_72.h
pi-ui/src/screens/: screen_manager.c  screen_manager.h
pi-ui/src/screens/boot_screen/: boot_screen.c  boot_screen.h
pi-ui/src/screens/home_screen/: home_screen.c  (+1 more)
pi-ui/src/state/: README.md  device_state.c  device_state.h
pi-ui/src/utils/: crash_handler.c  crash_handler.h
(+142 files in other folders)
